Fixing "News" list spacing

--- a/index.css
+++ b/index.css
@@ -47,13 +47,13 @@ p.winter1 {
 
 #news_list strong {
 	color: #FF0000;
-  margin-left: 15em;
+  margin-left: 17em;
 }
 
 #news_list ul li {
 	list-style-type: disc;
 	color: #000080;
-  margin-left: 15em;
+  margin-left: 17em;
 }
 
 #menu ul {
